fix mobile overflow issue

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -366,11 +366,14 @@
 
     .project-info {
         width: 360px;
-        overflow: hidden;
     }
 
     .skill-list > * {
         font-size: 70px;
+    }
+
+    .wrapper {
+        overflow: hidden;
     }
 }
 
